@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo.
+ * Copyright (c) 2021, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -35,7 +35,7 @@ public interface IDanglingRepresentationDeletionService {
      */
     boolean isDangling(IEditingContext editingContext, IRepresentation representation);
 
-    void deleteDanglingRepresentations(String editingContextId);
+    void deleteDanglingRepresentations(IEditingContext editingContext);
 
     /**
      * Implementation which does nothing, used for mocks in unit tests.
@@ -50,7 +50,7 @@ public interface IDanglingRepresentationDeletionService {
         }
 
         @Override
-        public void deleteDanglingRepresentations(String editingContextId) {
+        public void deleteDanglingRepresentations(IEditingContext editingContext) {
         }
 
     }
