@@ -19,6 +19,7 @@ import java.util.UUID;
 
 import org.eclipse.sirius.web.domain.boundedcontexts.project.Project;
 import org.eclipse.sirius.web.domain.boundedcontexts.representationdata.RepresentationData;
+import org.eclipse.sirius.web.domain.boundedcontexts.representationdata.projections.RepresentationDataMetadataOnly;
 import org.eclipse.sirius.web.domain.boundedcontexts.representationdata.repositories.IRepresentationDataRepository;
 import org.eclipse.sirius.web.domain.boundedcontexts.representationdata.services.api.IRepresentationDataSearchService;
 import org.springframework.data.jdbc.core.mapping.AggregateReference;
@@ -51,6 +52,11 @@ public class RepresentationDataSearchService implements IRepresentationDataSearc
     @Override
     public List<RepresentationData> findAllByProject(AggregateReference<Project, UUID> project) {
         return this.representationDataRepository.findAllByProjectId(project.getId());
+    }
+
+    @Override
+    public List<RepresentationDataMetadataOnly> findAllMetadataByProject(AggregateReference<Project, UUID> project) {
+        return this.representationDataRepository.findAllMetadataByProjectId(project.getId());
     }
 
     @Override
